Hashing & Cracking Techniques Updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ include_package_data = True
 python_requires = >=3.9
 install_requires =
     rich>=13.7.0
+    bcrypt>=4.1.2
 
 [options.entry_points]
 console_scripts =
