New Hashing & Cracking Techniques Added
-SHA-224 and SHA-384.
-Argon2 (argon2‑cffi, lazy import).
-scrypt (hashlib.scrypt).
-MSSQL 2000/2005/2012
-PostgreSQL
-Convert Base58

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ python_requires = >=3.9
 install_requires =
     rich>=13.7.0
     bcrypt>=4.1.2
+    argon2-cffi>=23.1.0
 
 [options.entry_points]
 console_scripts =
